# RAG-evaluate

./: .env.example  data.py  main.py  pyproject.toml
