[project]
name = "rag-evaluate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-ollama>=0.3.5",
    "ragas>=0.2.15",
    "ragflow-sdk>=0.19.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
